--- a/lab5/QuanLyPhongKham/nbproject/project.properties
+++ b/lab5/QuanLyPhongKham/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.output=${dist.jlink.dir}/QuanLyPhongKham
 excludes=
 file.reference.itextpdf-5.5.13.2.jar=lib\\itextpdf-5.5.13.2.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
+file.reference.jfreechart.jar=lib\\jfreechart.jar
 file.reference.lib-Libraries=lib\\Libraries
 file.reference.mysql-connector-java-5.1.49.jar=lib/mysql-connector-java-5.1.49.jar
 includes=**
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.49.jar}:\
     ${file.reference.lib-Libraries}:\
-    ${file.reference.itextpdf-5.5.13.2.jar}
+    ${file.reference.itextpdf-5.5.13.2.jar}:\
+    ${file.reference.jfreechart.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
